syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.projetosd.grpc";

package crud;

message ResponseModel {
  bool success = 1;
  string response = 2;
}

message SetRequest {
  string content = 1;
}

message GetRequest {
  bool all = 1;
  int64 id = 2;
}

message TestAndSetRequest {
  int64 id = 1;
  string content = 2;
}

message DelRequest {
  int64 id = 1;
}

service CrudService {
  rpc set(SetRequest) returns (ResponseModel);
  rpc get(GetRequest) returns (ResponseModel);
  rpc testAndSet(TestAndSetRequest) returns (ResponseModel);
  rpc del(DelRequest) returns (ResponseModel);
}